# GameOfLife

./: .gitignore  CMakeLists.txt  Matrix.cpp  Matrix.h  README.md  cell.cpp  cell.h  game_matrix.cpp  game_matrix.h  main.cpp  test_cell_matrix.cpp  test_game_of_life.cpp
lib/googletest-release-1.8.1/googlemock/: CMakeLists.txt
lib/googletest-release-1.8.1/googlemock/include/gmock/: gmock-matchers.h
lib/googletest-release-1.8.1/googletest/cmake/: internal_utils.cmake
